[FIX] make nav bar toggle on smallwr screens

--- a/mules_site/static/css/styles.css
+++ b/mules_site/static/css/styles.css
@@ -14,7 +14,6 @@ li {
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    height: 100%;
 }
 
 /* Style the header */
@@ -23,22 +22,6 @@ header {
     color: #fff;
     padding: 10px 0;
     text-align: center;
-}
-
-/* Style the navigation menu */
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
 }
 
 
